--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@csstools/normalize.css": "^11.0.1",
+    "@material-ui/core": "^4.11.2",
     "@reduxjs/toolkit": "^1.5.0",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
@@ -12,10 +13,13 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-hook-form": "^6.14.0",
     "react-redux": "^7.2.2",
     "react-scripts": "4.0.1",
     "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
     "styled-components": "^5.2.1",
+    "uniqid": "^5.2.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
@@ -32,7 +36,7 @@
       "react-app/jest"
     ]
   },
-  "homepage": "https://ArturStahov.github.io/name-repo-add",
+  "homepage": "https://ArturStahov.github.io/react-hook-form-test",
   "browserslist": {
     "production": [
       ">0.2%",
